[gd_scene load_steps=6 format=3 uid="uid://l3h1w4gggpe6"]

[ext_resource type="Script" uid="uid://b2568j74aywje" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://c02kjvske2c8q" path="res://scenes/background.tscn" id="2_ekxnf"]
[ext_resource type="Theme" uid="uid://dw8ljsikofh2f" path="res://textures/gameTheme.tres" id="3_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.25013205, 0.28362778, 0.30826032, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 8
shadow_offset = Vector2(0, 3)

[sub_resource type="Theme" id="Theme_vue75"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.09411765, 0.5254902, 0.5294118, 1)
Button/font_sizes/font_size = 70
Button/styles/normal = SubResource("StyleBoxFlat_l6cm7")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_l6cm7")

[node name="Background" parent="." instance=ExtResource("2_ekxnf")]
position = Vector2(603, 455)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 150
text = "Project Aegis"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 328.0
offset_right = 1200.0
offset_bottom = 888.0
theme = SubResource("Theme_vue75")

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("3_bqqt6")
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PLAY"

[node name="Instructions" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "INSTRUCTIONS"

[node name="Settings" type="Button" parent="CenterContainer/MainButtons"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "SETTINGS"

[node name="Credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "CREDITS"

[node name="Quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "QUIT"

[node name="CreditsMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = 321.0
offset_right = 1201.0
offset_bottom = 898.0

[node name="Label" type="Label" parent="CreditsMenu"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 0
offset_left = 82.0
offset_top = -52.0
offset_right = 1082.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 25
text = "A Game Developed by:
Dylan Hetzel    Philip Mugabi   Jamie Gremard   Jacob Wood"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SongLicense" type="Label" parent="CreditsMenu"]
layout_direction = 1
layout_mode = 0
offset_left = -306.0
offset_top = -28.0
offset_right = 1504.0
offset_bottom = 599.0
theme_override_font_sizes/font_size = 19
text = "Sound effect attributions:
Sound of Earth Crumbling: Texture_Rubber_Grain_2409UN by U-n -- https://freesound.org/s/832212/ -- License: Attribution 4.0
Asteriod collision: PART1: Gun Fire by Enithipicus -- https://freesound.org/s/831736/ -- License: Creative Commons 0
Lazer Bullet: Laser by xqetuos -- https://freesound.org/s/832516/ -- License: Creative Commons 0
UFO audio: Invasion by magnuswaker -- https://freesound.org/s/832586/ -- License: Creative Commons 0
Shield collision audio: kicking metal plate by eganthelover -- https://freesound.org/s/831709/ -- License: Attribution 4.0
Music attributions:
Intro Music \"Dreadful Whispers\": Music by: bensound.com, License code: 83MZ9JOTQTLVQ4OA
Artist: : FoePound,Level Music \"Boom Baddie\":
https://uppbeat.io/track/konstantin-garbuzyuk/boom-baddie\\ Artist: Konstantin Garbuzyuk
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="CreditsMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 439.0
offset_top = 455.0
offset_right = 739.0
offset_bottom = 538.0
size_flags_horizontal = 4
theme = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 60
text = "BACK"

[connection signal="pressed" from="CenterContainer/MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CreditsMenu/Back" to="." method="_on_back_pressed"]
